2003-03-02 Araki Ken <arakiken@users.sf.net>

	* grantpt() could behave unexpectedly because SIGCHLD installed when
	  grantpt() execed. Fixed.

2003-03-02 Tomohiro KUBOTA <kubota@debian.org>

	* Added "New PTY" button for mlconfig.

2003-03-02 MINAMI Hirokazu <minami@mistfall.net>

	* Code cleanup in the gdk-pixbuf module. 
	 (gave up "correct" color conversion scheme for the sake of simplicity)

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* Removed is_active[] array in ml_term_manager.c, and each ml_term_t has
	  is_attached flag.

2003-03-02 MINAMI Hirokazu <minami@mistfall.net>

	* fixed a pixmap cache corruption with gdk-pixbuf
	 (Thanks to Sato san and Kubota san)
	
2003-03-02 Araki Ken <arakiken@users.sf.net>

	* The point where column width changed is regarded as the boundary of words.
	  (Now character set is not considered when the boundary of words is searched.)

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* Unswitchable ptys were shown in PTY List of mlconfig. Fixed.

2003-03-02 Tomohiro KUBOTA <kubota@debian.org>

	* Forgot to define N_() in addition to _() in common/c_intl.h .
	  Thanks to Sakamoto Hironori san.

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* Characters whose character sets are the same alone are regarded as one word.

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* If ENCODING option not set, character encoding wasn't detected automatically. Fixed.
	  (Thanks to Kubota Tomohiro san)

2003-03-02 Tomohiro KUBOTA <kubota@debian.org>

	* Fixed tools/mlconfig/mc_flags.[ch] and tools/mlconfig/po/POTFILES.in
	  to enable translation (gettextization) of labels which are handled
	  in mc_flags.[ch] .
	* Updated po files in tools/mlconfig/po .

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* If Backspace -> 0-9 or space pressed continuously, backspace was output twice
	  in some environment. Fixed.

2003-03-02 Araki Ken <arakiken@users.sf.net>

	* Added -$/--mc/click_interval option.
	* Updated libtool to 1.4.3.
